v0.1.0/_sources/user/generated/ophyd_async.core.rst.txt
.. note::

    Ophyd async is included on a provisional basis until the v1.0 release and 
    may change API on minor release numbers before then

ophyd\_async.core
=================

.. automodule:: ophyd_async.core

   
   
   

   
   
   .. rubric:: Functions

   .. autosummary::
      :toctree:
      :nosignatures:
   
      observe_value
      set_and_wait_for_value
      set_sim_callback
      set_sim_put_proceeds
      set_sim_value
      wait_for_value
      get_dtype
      get_unique
      merge_gathered_dicts
      wait_for_connection
   
   

   
   
   .. rubric:: Classes

   .. autosummary::
      :toctree:
      :template: custom-class-template.rst
      :nosignatures:
   
      SignalBackend
      SimSignalBackend
      Signal
      SignalR
      SignalW
      SignalRW
      SignalX
      Device
      DeviceCollector
      DeviceVector
      StandardReadable
      AsyncStatus
   
   

   
   
   .. rubric:: Exceptions

   .. autosummary::
      :toctree:
      :nosignatures:
   
      NotConnected
   
   



